--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -14,3 +14,8 @@
   align-items: center;
   justify-content: center;
 }
+
+@function toRem($value) {
+  $remValue: ($value / 16) + rem;
+  @return $remValue;
+}
