--- a/styles/_util.scss
+++ b/styles/_util.scss
@@ -5,6 +5,6 @@ $border-radius: 0.5rem;
 $padding: 1rem 1.5rem;
 $button-disabled-opacity: 0.4;
 $box-shadow: rgba(0, 0, 0, 0.5);
-$box-shadow-full: 0 0.5rem 0.938rem $box-shadow;
+$box-shadow-full: 0px 15px 30px -11px rgba(131, 166, 210, 0.5);
 $transition-speed: 0.3s;
 $navbar-height: 5.5rem;
